syntax = "proto3";

package torrent.server;

message ListAvailableFilesResponse {
    message SingleFile {
        string filename = 1;
        uint64 chunk_size = 2;
        uint64 num_chunks = 3;
        uint64 file_size = 4;
        repeated string peers = 5;
    }

    repeated SingleFile files = 1;
}

message Peer {
    uint32 ip = 1;
    uint32 port = 2;
}

message DownloadFileResponse {
    repeated Peer peers = 1;
    uint64 num_chunks = 2;
    uint64 chunk_size = 3;
    uint64 file_Size = 4;
}
